--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "18.20.8"
+  },
   "dependencies": {
     "discord.js": "^14.16.0",
     "@discordjs/voice": "^0.17.0",
